examples/bad/07-static-typing.mw
var x [int] = [];
x = [1, 2];
x = ["A"]; // Static type checking failure
